# OpenAI

ChatbotWebApp/: .gitignore  README.md  mocha.opts  package-lock.json  package.json  pyproject.toml  run.py  run_copy.py
ChatbotWebApp/static/: script.js  script.test.js  style.css
ChatbotWebApp/templates/: index.html
